# sui-id-miner

./: .gitignore  Cargo.toml  DESIGN.md  GUIDE.md  LICENSE  README.md
.github/workflows/: build.yml
app/: .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  vercel.json
app/src/: App.css  App.tsx  index.css  types.ts
app/src/components/: ConfigCard.tsx  Docs.tsx  Footer.tsx  Header.tsx  MiningControl.tsx  ModeSwitcher.tsx  NeoSelect.tsx  ResultsList.tsx  Toast.tsx
app/src/components/mining-config/: CommonConfig.tsx  GasCoinConfig.tsx  MoveCallConfig.tsx  PackageConfig.tsx
app/src/components/mining-config/shared/: GasObjectInput.tsx  GasSettings.tsx  SenderInput.tsx
app/src/hooks/: useBestGasCoin.ts  useGasBalance.ts  useSmoothStats.ts  useToast.ts  useWebSocketMiner.ts
cli/: Cargo.toml  README.md
cli/src/: common.rs  cpu_miner.rs  gas_coin_miner.rs  lib.rs  main.rs  module_order.rs  progress.rs  server.rs  target.rs  types.rs  wasm_miner.rs
cli/src/mining/: config.rs  executor.rs  gpu.rs  kernel.cl  mod.rs  mode.rs
src/: cpu_miner.rs  lib.rs  main.rs  server.rs  target.rs  types.rs
